[package]
name = "ipcon-sys"
version = "0.1.0"
authors = ["Seimizu Joukan <saimizi@gmail.com>"]
edition = "2018"
repository = "git@gitlab.com:joukan/ipcon-sys.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
#default = ["use-ipcon-logger"]
use-ipcon-logger=[]
use-self-logger=[]

[lib]
name = "ipcon_sys"
path = "src/lib.rs"
required-features = ["use-ipcon-logger"]

[[bin]]
name = "ripcon_cmd"
path = "src/ripcon_cmd.rs"
required-features = ["use-ipcon-logger"]

[[bin]]
name = "ripcon_logger"
path = "src/ripcon_logger.rs"
required-features = ["use-ipcon-logger"]

[[bin]]
name = "ripcon_wait"
path = "src/ripcon_wait.rs"
required-features = ["use-ipcon-logger"]

[[bin]]
name = "ripcon_logger_client"
path = "src/ripcon_logger_client.rs"
required-features = ["use-self-logger"]


[dependencies]
libc = "0.2.88"
getopts = "0.2.21"
env_logger = "0.8.3"
log = "0.4.14"
bytes = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.3.2"
