[package]
name = "ipcon-sys"
description = "Rust binding for IPCON."
version = "0.1.1"
authors = ["Seimizu Joukan <joukan.seimizu@gmail.com>"]
edition = "2018"
repository = "https://github.com/saimizi/ipcon-sys.git"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ipcon_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2.88"
log = "0.4.14"
jlogger = "0.1.1"
bytes = "1.0.1"
nix = "0.22.1"
futures = { version= "0.3.17", features = ["thread-pool"], optional = true }
tokio = { version = "1", features = ["full"], optional = true}



[features]
default = []
async = [ "futures" , "tokio"]
