[package]
name = "ipcon-sys"
description = "Rust binding for IPCON."
version = "0.2.1"
authors = ["Seimizu Joukan <joukan.seimizu@gmail.com>"]
edition = "2021"
repository = "https://github.com/saimizi/ipcon-sys.git"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ipcon_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2.88"
nix = "0.22.1"
futures = { version= "0.3.17", features = ["thread-pool"], optional = true }
tokio = { version = "1", features = ["full"], optional = true}
error-stack = "0.3.1"
jlogger-tracing = "0.1.4"
tracing = "0.1.37"



[features]
default = []
async = [ "futures" , "tokio"]
