[package]
name = "ipcon-sys-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ripcon_client"
path = "src/ripcon_client.rs"

[[bin]]
name = "ripcon_server"
path = "src/ripcon_server.rs"

[[bin]]
name = "ripcon_server_async"
path = "src/ripcon_server_async.rs"
required-features=["async"]

[[bin]]
name = "ripcon_client_async"
path = "src/ripcon_client_async.rs"
required-features=["async"]

[dependencies]
ipcon-sys = {path= "../"}
error-stack = "0.2.4"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"], optional=true}
jlogger-tracing = "0.1.4"
tracing = "0.1.37"

[features]
default=[]
async=["tokio", "ipcon-sys/async"]

[build-dependencies]
jlogger-tracing = "0.1.4"
tracing = "0.1.37"


